--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
 <body>
-	<h1>Hello World! and SAFIN))</h1>
+	<h1>EREMA PIDOR)</h1>
 </body>
 </html>
