--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
-    <link></link>
 </head>
 <body>
-   <div class="wrapper">
-   <div class="row navbar">
-<nav class="flex-center vertical-middle row width-1-1">
-	<a href="index.html" class="link">Домашняя страница</a>
-	<a href="music.html" class="link">Музыка</a>
-	<a href="photo.html" class="link">Фото</a>
-	<a href="video.html" class="link">Видео</a>
-	<a href="index.html" class="link">Прочее</a>
-	</div>
+    <div class="wrapper">
+        <div class="row navbar">
+            <nav class="flex-center row width-1-1">
+                <a href="index.html" class="link">Home</a>
+                <a href="img.html" class="link">Kortinki</a>
+                <a href="video.html" class="link">Widea</a>
+                <a href="music.html" class="link">Muzika</a>
+                <a href="about.html" class="link">0b nas</a>
+            </nav>
+        </div>
 
-</nav>
-   	<div class="row">
-   		<aside class="width-2-6"></aside>
-   		<article class="width-4-6"></article>
-   	</div>
+        <div class="row">
+            <aside class="width-2-6">
+                <p>Dobro pozhalovat' na sait o vsemirnom zagovore</p>
+            </aside>
+            <article class="width-4-6">
+                <img class="im1 flex-center" src="http://mydreamcompany333.weebly.com/uploads/5/4/9/5/54952315/s938110379110678739_p2_i2_w960.png" alt="masoni-frog">
+            </article>
+        </div>
 
-   	<footer class="row"></footer>
-   </div>
+        <footer class="row">
+            <p>Chesno govorya y nas prova ne zashishini</p>
+        </footer>
+    </div>
 </body>
 </html>
