--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="row">
             <aside class="width-2-6">
-                <p>Dobro pozhalovat' na sait o vsemirnom zagovore</p>
+                <p>Сайт просто так для вида </p>
             </aside>
             <article class="width-4-6">
                 <img class="im1 flex-center" src="http://mydreamcompany333.weebly.com/uploads/5/4/9/5/54952315/s938110379110678739_p2_i2_w960.png" alt="masoni-frog">
@@ -28,7 +28,7 @@
         </div>
 
         <footer class="row">
-            <p>Chesno govorya y nas prova ne zashishini</p>
+            <p>Текст в низу </p>
         </footer>
     </div>
 </body>
